--- a/first.html
+++ b/first.html
@@ -13,7 +13,7 @@
         <h4 id="firsttitle">有序列表:</h4>
         <ol>
             <li>
-                <a href="#under">1.移到最底</a>
+                <a href="#under">移到最底</a>
             </li>
         </ol>
     </div>
@@ -119,7 +119,7 @@
             <label>年齡 : </label><input type="text"/><br>
             上傳檔案 : <input type="file"/><br>
             <label>選擇日期 : </label><input type="date"/><br>
-            性別 : <input type="radio" name="sex" value="boy"/>男生 <input type="radio" name="sex" value="girl"/>女生<br/>
+            性別 : <input type="radio" name="sex" value="boy" checked/>男生 <input type="radio" name="sex" value="girl"/>女生<br/>
             <label>拉桿</label><input type="range" max="100" min="0"/><br/>
             <label>留言</label><br/><textarea>在這輸入留言....</textarea>
             <input type="checkbox" id="agree" required/><label for="agree">同意提交</label>
