--- a/2024-1-15/first.html
+++ b/2024-1-15/first.html
@@ -121,7 +121,7 @@
             <label>選擇日期 : </label><input type="date"/><br>
             性別 : <input type="radio" name="sex" value="boy" checked/>男生 <input type="radio" name="sex" value="girl"/>女生<br/>
             <label>拉桿</label><input type="range" max="100" min="0"/><br/>
-            <label>留言</label><br/><textarea>在這輸入留言....</textarea>
+            <label>留言</label><br/><textarea placeholder="在這輸入留言...."></textarea><br>
             <input type="checkbox" id="agree" required/><label for="agree">同意提交</label>
             <br/>
             <input type="reset" />
