--- a/練習/test.html
+++ b/練習/test.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/test.css">
 </head>
 <body>
-
+    <header>
+        
+        <nav>
+            <ul>
+                <li><a href="#" class="logo">Gogoro</a></li>
+                <li><a href="#">Smartscooter®</a></li>
+                <li><a href="#">Gogoro Network®</a></li>
+                <li><a href="#">尋找門市</a></li>
+                <li><a href="#">網路商店</a></li>
+                <li><a href="#">最新優惠</a></li>
+                <li><a href="#">支援服務</a></li>
+                <li id="nullLi"></li>
+                <li><a href="#">打造愛車</a></li>
+                <li><a href="#">預約試騎</a></li>
+                <li><a href="#">登入</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
